// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browse byChar should return an object of formatted results 1`] = `
Array [
  Object {
    "books": Array [
      Object {
        "title": "book1",
      },
    ],
    "title": 1,
  },
]
`;

exports[`Browse createRegexStr "a-zA-Z" character should return a formatted regex expressions 1`] = `"^[Aa]"`;

exports[`Browse relatedBooks should return an array of results 1`] = `
Array [
  Object {
    "title": "book1",
  },
]
`;
